syntax = "proto3";

package rpcpb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "kv_rpc.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

message InternalRequest {
  uint64 ID = 1;

  rpcpb.PutRequest put = 3;
  rpcpb.DelRequest del = 4;
  rpcpb.WriteRequest write = 5;
}

// protoc -I . -I $env:GOPATH/src --gogofaster_out=plugins=grpc:. .\**.proto